@@ -25,14 +25,14 @@ around 'initialise_stash' => sub {
    }
 
    $stash->{skin } = delete $stash->{prefs}->{skin};
-   $stash->{links}->{cdnjs   } = $conf->cdnjs;
-   $stash->{links}->{base_uri} = $req->base;
-   $stash->{links}->{req_uri } = $req->uri;
 
-   for my $k (@{ $conf->common_links }) {
+   for my $k (@{ $conf->stash_attr->{links} }) {
       $stash->{links}->{ $k } = $req->uri_for( $conf->$k() );
    }
 
+   $stash->{links}->{cdnjs   } = $conf->cdnjs;
+   $stash->{links}->{base_uri} = $req->base;
+   $stash->{links}->{req_uri } = $req->uri;
    return $stash;
 };
 
